tests/negative/test_dot_multi_ind_cn_asgn.orb
fnc main () () {
    sym (x:(((i32 cn) i32) (i32 i32)) (tup (tup 0:(i32 cn) 0:i32) (tup 0:i32 0:i32)));
    = (. x 0 0) 999;
};